# HomomorphicEncryption

./: .Rbuildignore  .gitignore  DESCRIPTION  HomomorphicEncryption.Rproj  NAMESPACE  NEWS  cleanup  configure  configure.ac
R/: CRT.R  FandV.R  FandV_CRT.R  dec.R  enc.R  homomorphicOps.R  keygen.R  pars.R  parsHelp.R  save.R  zzz.R
inst/: CITATION
man/: Arithmetic.Rd  FHE-package.Rd  FandV.Rd  FandV_CRT.Rd  HomomorphicEncryption-package.Rd  Vectors.Rd  dec.Rd  enc.Rd  fhe-package.Rd  keygen.Rd  pars.Rd  parsHelp.Rd  saveFHE.Rd
src/: FandV.cpp  FandV.h  FandV_ct.cpp  FandV_ct.h  FandV_ct_mat.cpp  FandV_ct_mat.h  FandV_ct_vec.cpp  FandV_ct_vec.h  FandV_keys.cpp  FandV_keys.h  FandV_par.cpp  FandV_par.h  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  getline.c  getline.h
tests/: test-all.R
tests/testthat/: test-FandV.R  test-FandV_CRT_ct.R  test-FandV_ct.R  test-FandV_ct_mat.R  test-FandV_ct_vec.R
tools/: winlibs.R
